bug fixes for shadow, spellcheck, and added text wrapping

--- a/static/css/memeedit.css
+++ b/static/css/memeedit.css
@@ -42,20 +42,21 @@
   border: 2px dashed rgba(200, 200, 200, 0.5);
 }
 
-.text-content {
-  line-height: 1; /* Remove additional line spacing */
+.text-content {  
+  /* No wrap original */
+  line-height: 1;
+  /* white-space: nowrap; */
 
-  /* Added for lanugauge support */
+  /* Text wraping */
   /* line-height: 1.2; */
-  /* word-wrap: break-word;
+  word-wrap: break-word;
   overflow-wrap: break-word;
-  white-space: normal; */
+  white-space: normal;
 
   width: 100%;
   height: 100%;
   font-size: 2em;
   outline: none;
-  white-space: nowrap;
 
   text-align: center;
   margin: 0;
